--- a/compose.yaml
+++ b/compose.yaml
@@ -3,8 +3,17 @@ services:
     image: traefik:v2.10
     restart: unless-stopped
     ports:
+      - 8080:8080
       - 80:80
       - 443:443
+    volumes:
+      - /var/run/docker.sock:/var/run/docker.sock:ro
+      - ./config/traefik.yaml:/etc/traefik/traefik.yaml
+    labels:
+      - "traefik.enable=true"
+      - "traefik.http.routers.dashboard.rule=Host(`dashboard.localhost`)"
+      - "traefik.http.routers.dashboard.service=api@internal"
+      - "traefik.http.routers.dashboard.entrypoints=web"
 
 networks:
   proxy:
