chore: update email handling in config and compose files
- Add environment variable for email to `compose.yaml`
- Set email in `config/traefik.yaml` using the EMAIL environment variable

Signed-off-by: Pavel Karpovich <pavel.karpovich@outlook.com>

--- a/config/traefik.yaml
+++ b/config/traefik.yaml
@@ -34,6 +34,7 @@ entryPoints:
 certificatesResolvers:
   le:
     acme:
+      email: '{{env "EMAIL"}}'
       httpChallenge:
         entryPoint: web
 
