--- a/compose.yaml
+++ b/compose.yaml
@@ -2,6 +2,8 @@ services:
   gateway:
     image: traefik:v2.10
     restart: unless-stopped
+    environment:
+      - EMAIL=${EMAIL}
     ports:
       - 8080:8080
       - 80:80
