--- a/config/traefik.yaml
+++ b/config/traefik.yaml
@@ -9,6 +9,8 @@ experimental:
 
 ping: { }
 
+accessLog: { }
+
 api:
   insecure: true
   dashboard: true
@@ -22,20 +24,23 @@ providers:
 entryPoints:
   web:
     address: :80
+    http:
+      redirections:
+        entryPoint:
+          to: web-secure
+          scheme: https
+          permanent: true
 
   web-secure:
     address: :443
-
-#  web-new:
-#    address: :443
-#    http3:
-#      advertisedPort: 443
+    http3:
+      advertisedPort: 443
+    http:
+      tls:
+        certResolver: le
 
 certificatesResolvers:
   le:
     acme:
-      email: '{{env "EMAIL"}}'
       httpChallenge:
         entryPoint: web
-
-accessLog: { }
