refactor: improve dashboard security and enable HTTP/3
- Remove port 8080 mapping in compose.yaml
- Replace hardcoded `dashboard.localhost` with `${DASHBOARD_DOMAIN}` variable
- Change entrypoint to `web-secure` for the dashboard router
- Add basic authentication middleware for the dashboard with `${DASHBOARD_AUTH}` variable
- Enable HTTP/3 in traefik.yaml
- Remove ping, accessLog configurations from traefik.yaml

Signed-off-by: Pavel Karpovich <pavel.karpovich@outlook.com>

--- a/compose.yaml
+++ b/compose.yaml
@@ -5,7 +5,6 @@ services:
     environment:
       - TRAEFIK_CERTIFICATESRESOLVERS_LE_ACME_EMAIL=${EMAIL}
     ports:
-      - 8080:8080
       - 80:80
       - 443:443
     volumes:
@@ -16,9 +15,11 @@ services:
       - proxy
     labels:
       - "traefik.enable=true"
-      - "traefik.http.routers.dashboard.rule=Host(`dashboard.localhost`)"
+      - "traefik.http.routers.dashboard.rule=Host(`${DASHBOARD_DOMAIN}`)"
       - "traefik.http.routers.dashboard.service=api@internal"
-      - "traefik.http.routers.dashboard.entrypoints=web"
+      - "traefik.http.routers.dashboard.entrypoints=web-secure"
+      - "traefik.http.middlewares.dashboard-auth.basicauth.users=${DASHBOARD_AUTH}"
+      - "traefik.http.routers.dashboard.middlewares=dashboard-auth"
 
 volumes:
   letsencrypt_data:
