feat(compose.yaml, config/traefik.yaml): upgrade Traefik to v3.0 and enable HTTP/3 support
- Upgrade Traefik image from v2.10 to v3.0 to leverage new features and improvements.
- Enable HTTP/3 support in Traefik configuration for enhanced web performance.
- Add explicit TCP and UDP support for port 443 in the gateway service to accommodate HTTP/3 requirements.

--- a/compose.yaml
+++ b/compose.yaml
@@ -1,12 +1,13 @@
 services:
   gateway:
-    image: traefik:v2.10
+    image: traefik:v3.0
     restart: unless-stopped
     environment:
       - TRAEFIK_CERTIFICATESRESOLVERS_LE_ACME_EMAIL=${EMAIL}
     ports:
       - 80:80
-      - 443:443
+      - 443:443/tcp
+      - 443:443/udp
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock:ro
       - letsencrypt_data:/letsencrypt
